--- a/project/src/index.html
+++ b/project/src/index.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <div id="TheBestGallery">
+        <h1>Gallery</h1>
+    </div>
     <div id="gallery">
         <h1>Welcome</h1>
         <button id="btnBlock">Точніше</button>
@@ -125,6 +128,14 @@
             </div>
         </div>
     </section>
+    <div class="modal-overlay" id="modalOverlay">
+        <div class="modal">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <button onclick="closeModal()">Close</button>
+        </div>
+    </div>
 </body>
 
 </html>
