--- a/project/src/index.html
+++ b/project/src/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    
+
 
     <div id="TheBestGallery">
         <h1>Our Art Gallery</h1>
@@ -61,7 +61,7 @@
             <button class="callNumberBtn">Buy Now</button>
         </div>
     </div>
-    
+
 
     <section class="catalog-section">
         <div class="catalog-container">
@@ -169,9 +169,10 @@
     <footer>
         <a href="tel:+1234567890" class="call-button">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50">
-              <path fill="#fff" d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l1.2-1.2c.27-.27.67-.36 1.03-.26 1.12.28 2.33.44 3.57.44.55 0 1 .45 1 1v3.5c0 .55-.45 1-1 1C9.16 22 2 14.84 2 6.5 2 5.95 2.45 5.5 3 5.5h3.5c.55 0 1 .45 1 1 0 1.24.15 2.45.44 3.57.1.36.01.76-.26 1.03l-1.2 1.19z"/>
+                <path fill="#fff"
+                    d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l1.2-1.2c.27-.27.67-.36 1.03-.26 1.12.28 2.33.44 3.57.44.55 0 1 .45 1 1v3.5c0 .55-.45 1-1 1C9.16 22 2 14.84 2 6.5 2 5.95 2.45 5.5 3 5.5h3.5c.55 0 1 .45 1 1 0 1.24.15 2.45.44 3.57.1.36.01.76-.26 1.03l-1.2 1.19z" />
             </svg>
-          </a>
+        </a>
         <h3>Lorem, ipsum.</h3>
         <p>1234567890</p>
     </footer>
