--- a/project/src/index.html
+++ b/project/src/index.html
@@ -104,7 +104,7 @@
                     <h1>Contemporary Art</h1>
                     <p class="li-p">Explore the bold and expressive world of contemporary paintings, each piece offering
                         a fresh perspective.</p>
-                    <button class="btn">Shop Now</button>
+                    <button id="shopBtn" class="btn">Shop Now</button>
                     <p></p>
                 </li>
             </ul>
