--- a/project/src/index.html
+++ b/project/src/index.html
@@ -173,7 +173,7 @@
                     d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l1.2-1.2c.27-.27.67-.36 1.03-.26 1.12.28 2.33.44 3.57.44.55 0 1 .45 1 1v3.5c0 .55-.45 1-1 1C9.16 22 2 14.84 2 6.5 2 5.95 2.45 5.5 3 5.5h3.5c.55 0 1 .45 1 1 0 1.24.15 2.45.44 3.57.1.36.01.76-.26 1.03l-1.2 1.19z" />
             </svg>
         </a>
-        <h3>Lorem, ipsum.</h3>
+        <h3>call back on the number</h3>
         <p>1234567890</p>
     </footer>
 </body>
