--- a/project/src/index.html
+++ b/project/src/index.html
@@ -19,12 +19,11 @@
             </div>
             <ul class="nav-list">
                 <li class="li1"><img src="/project/src/images/Art Gallery.webp" alt=""></li>
-                <li class="li2">Gallery</li>
-                <li class="li3">About Us</li>
-            </ul>
+                <li class="li2"><a href="#gallery">Gallery</a></li>
+                <li class="li3"><a href="#elektrik-conteiner">About Us</a></li>
+            </ul>            
         </nav>
     </header>
-
 
     <div id="TheBestGallery">
         <h1>Our Art Gallery</h1>
@@ -35,9 +34,10 @@
         <button id="btnBlock">Точніше</button>
         <p id="text"></p>
     </div>
+
     <div class="gallery">
         <div class="card">
-            <img src="https://via.placeholder.com/300x200" alt="Картина 1">
+            <img src="/project/src/images/my-Guse.webp" alt="Картина 1">
             <h3>Sunset Bliss</h3>
             <p>Artist: Maria Ivanova</p>
             <p class="price">Price: $500</p>
@@ -45,7 +45,7 @@
             <button class="callNumberBtn">Buy Now</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/300x200" alt="Картина 2">
+            <img src="/project/src/images/my-Guse.webp" alt="Картина 2">
             <h3>Ocean Dreams</h3>
             <p>Artist: John Smith</p>
             <p class="price">Price: $700</p>
@@ -53,7 +53,7 @@
             <button class="callNumberBtn">Buy Now</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/300x200" alt="Картина 3">
+            <img src="/project/src/images/my-Guse.webp" alt="Картина 3">
             <h3>Golden Forest</h3>
             <p>Artist: Emily Taylor</p>
             <p class="price">Price: $900</p>
@@ -62,29 +62,28 @@
         </div>
     </div>
 
-
     <section class="catalog-section">
         <div class="catalog-container">
             <div class="catalog-item">
-                <img src="https://th.bing.com/th/id/R.9954423fd752b07fc1aeba09a48b659c?rik=MRbiUlLiQ6G73g&pid=ImgRaw&r=0"
+                <img src="/project/src/images/my-Guse.webp"
                     alt="Painting 1">
                 <h3>Abstract Beauty</h3>
                 <p class="myP">A vivid explosion of color and texture that captivates the viewer's imagination.</p>
             </div>
             <div class="catalog-item">
-                <img src="https://th.bing.com/th/id/R.9954423fd752b07fc1aeba09a48b659c?rik=MRbiUlLiQ6G73g&pid=ImgRaw&r=0"
+                <img src="/project/src/images/my-Guse.webp"
                     alt="Painting 2">
                 <h3>Silent Morning</h3>
                 <p class="myP">An elegant landscape capturing the quiet beauty of early dawn.</p>
             </div>
             <div class="catalog-item">
-                <img src="https://th.bing.com/th/id/R.9954423fd752b07fc1aeba09a48b659c?rik=MRbiUlLiQ6G73g&pid=ImgRaw&r=0"
+                <img src="/project/src/images/my-Guse.webp"
                     alt="Painting 3">
                 <h3>Whispers of the Wind</h3>
                 <p class="myP">A delicate portrayal of nature’s unseen forces, full of movement and emotion.</p>
             </div>
             <div class="catalog-item">
-                <img src="https://th.bing.com/th/id/R.9954423fd752b07fc1aeba09a48b659c?rik=MRbiUlLiQ6G73g&pid=ImgRaw&r=0"
+                <img src="/project/src/images/my-Guse.webp"
                     alt="Painting 4">
                 <h3>Autumn Serenade</h3>
                 <p class="myP">An ode to the vibrant hues and peaceful atmosphere of the fall season.</p>
@@ -176,6 +175,7 @@
         <h3>call back on the number</h3>
         <p>1234567890</p>
     </footer>
+
 </body>
 
 </html>
